--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -108,3 +108,54 @@ nav .menu a{
     /* display: block; */
     vertical-align: top;
 }
+#about{
+    padding-top: 130px;
+    
+}
+#about .about-container{
+    width: 74%;
+    max-width: 1140px;
+    margin: 0 auto;
+    text-align: center;
+    background-color:#f6c8a8ed;
+    padding: 131px 157px;
+}
+.section-header{
+    max-width: 827px;
+    text-align: center;
+}
+.section-header h2{
+    font-size: 35px;
+    font-weight: 800;
+    color: #181818;
+    margin-bottom: 30px;
+}
+
+ .section-header p{
+    font-size: 18px;
+    color: #757575;
+    margin-bottom: 30px;
+    line-height: 30px;
+}
+#about .about-container .about-info{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info .card-info p{
+    color: #757575;
+    font-size: 18px;
+    /* color: #757575; */
+    /* margin-bottom: 30px; */
+    line-height: 30px;
+}
+.about-info .card-info h4{
+    color: #181818;
+    font-weight: 800;
+    font-size: 18px;
+    /* color: #757575; */
+    /* margin-bottom: 30px; */
+    /* line-height: 30px; */
+}
+.about-info .card-info h4:hover{
+    background-color: bisque;
+}
